All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Context_Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Context_Source_Object__c</fullName>
    <description>Context field belongs to this object. Supported options are Current Record  &amp; Parent Record</description>
    <label>Context Source Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CURRENT_RECORD</fullName>
            </value>
            <value>
                <fullName>PARENT_RECORD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>