All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Control_Type__c.field-meta.xml
<CustomField>
    <fullName>Control_Type__c</fullName>
    <description>Type of control to be used in iPad client to capture data for this field. Applies to numeric fields</description>
    <inlineHelpText>Type of control to be used in iPad client to capture data for this field. Applies to numeric fields</inlineHelpText>
    <label>Control Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Spin</fullName>
            </value>
            <value>
                <fullName>Slider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>