All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <label>DataType</label>
    <length>150</length>
    <type>Text</type>
</CustomField>