All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Detail_Type__c.field-meta.xml
<CustomField>
    <fullName>Detail_Type__c</fullName>
    <description>Detail Type</description>
    <inlineHelpText>Detail Type</inlineHelpText>
    <label>Detail Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Section</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Button</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>