All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Display_Column__c.field-meta.xml
<CustomField>
    <fullName>Display_Column__c</fullName>
    <description>Display Column</description>
    <inlineHelpText>Display Column</inlineHelpText>
    <label>Display Column</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>