All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Display_Row__c.field-meta.xml
<CustomField>
    <fullName>Display_Row__c</fullName>
    <description>Display Row</description>
    <inlineHelpText>Display Row</inlineHelpText>
    <label>Display Row</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>