All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/IsStandard__c.field-meta.xml
<CustomField>
    <fullName>IsStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsStandard</description>
    <inlineHelpText>IsStandard</inlineHelpText>
    <label>Is Standard?</label>
    <type>Checkbox</type>
</CustomField>