All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/No_Of_Columns__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Columns__c</fullName>
    <description>Number of columns for the section. Applies to header sections only.</description>
    <inlineHelpText>Number of columns for the section. Applies to header sections only.</inlineHelpText>
    <label>No Of Columns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>