All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Override__c.field-meta.xml
<CustomField>
    <fullName>Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override (Not available for use)</label>
    <type>Checkbox</type>
</CustomField>