All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Override_Related_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Override_Related_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Override Related Lookup</description>
    <inlineHelpText>Override Related Lookup</inlineHelpText>
    <label>Override Related Lookup</label>
    <type>Checkbox</type>
</CustomField>