All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Page_Layout__c.field-meta.xml
<CustomField>
    <fullName>Page_Layout__c</fullName>
    <description>Page Layout</description>
    <inlineHelpText>Page Layout</inlineHelpText>
    <label>Page Layout</label>
    <referenceTo>Page_Layout__c</referenceTo>
    <relationshipLabel>Page Layout Details</relationshipLabel>
    <relationshipName>Page_Layout_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>