All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question_Bank__c</referenceTo>
    <relationshipLabel>Page Layout Details</relationshipLabel>
    <relationshipName>Page_Layout_Details</relationshipName>
    <type>Lookup</type>
</CustomField>