All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/QuestionInfoJSON__c.field-meta.xml
<CustomField>
    <fullName>QuestionInfoJSON__c</fullName>
    <label>QuestionInfoJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>