All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Readonly__c.field-meta.xml
<CustomField>
    <fullName>Readonly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Readonly</description>
    <inlineHelpText>Readonly</inlineHelpText>
    <label>Readonly</label>
    <type>Checkbox</type>
</CustomField>