All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Related_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Name__c</fullName>
    <description>Related Object Name</description>
    <label>Related Object Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>