All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Related_Object_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Name_Field__c</fullName>
    <description>Related Object&apos;s Name Field</description>
    <inlineHelpText>Related Object&apos;s Name Field</inlineHelpText>
    <label>Related Object Name Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>