All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required</description>
    <inlineHelpText>Required</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>