All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Section</description>
    <inlineHelpText>Section</inlineHelpText>
    <label>Section</label>
    <referenceTo>Page_Layout_Detail__c</referenceTo>
    <relationshipLabel>Section</relationshipLabel>
    <relationshipName>Page_Layout_Details</relationshipName>
    <type>Lookup</type>
</CustomField>