All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Show_In_Web__c.field-meta.xml
<CustomField>
    <fullName>Show_In_Web__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show In Web</label>
    <type>Checkbox</type>
</CustomField>