All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/SM_Checklist_Source_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Checklist_Source_Field_API_Name__c</fullName>
    <description>Field to hold API name of the field mapped to the question</description>
    <inlineHelpText>Field to hold API name of the field mapped to the question</inlineHelpText>
    <label>Checklist Source Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>