All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/SM_Help_URL__c.field-meta.xml
<CustomField>
    <fullName>SM_Help_URL__c</fullName>
    <label>Help URL</label>
    <type>Url</type>
</CustomField>