All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title</description>
    <inlineHelpText>Title</inlineHelpText>
    <label>Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>