All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Use_For_SLA_Clock__c.field-meta.xml
<CustomField>
    <fullName>Use_For_SLA_Clock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this page layout section must be used for displaying SLA Clock in iPad client. Applies to header sections only.</description>
    <inlineHelpText>Indicates if this page layout section must be used for displaying SLA Clock in iPad client. Applies to header sections only.</inlineHelpText>
    <label>Use For SLA Clock</label>
    <type>Checkbox</type>
</CustomField>