All_Component_DX/force-app/main/default/objects/Page_Layout_Detail__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <label>Width</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>